# RDGame

./: README.MD  character.py  dialog.py  game.py  maps.py  player.py  pyproject.toml  requirements.txt  serverclient.py  warp.py
images/sprites/: spritemap.xcf
maps/: emptyfield.tmx  farm.tmx  magicshop.tmx  weaponshop.tmx
pipoya/SampleMap/: samplemap.tmx
