[tool.poetry]
name = "rdgame"
version = "0.1.0"
description = ""
authors = ["Kenny Van de Maele <kenny@adimian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.14"
arcade = "^2.6.16"
tiled = "^0.1.0a75"
PyOpenGL = "^3.1.6"
etcd3 = "^0.12.0"
protobuf = "3.20.3"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
